# esp3-chatbot

./: .dockerignore  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt  run_api.py
data/: checkpoints.csv  demo.csv  eval_results.json  sources.csv
data/processed/: chunks.parquet  index.faiss  mapping.parquet
src/: api.py  main.py
src/adapters/: arg_adapter.py  arg_parser.py  logger_adapter.py  logger_strdin.py
src/eval/: evaluate.py  gold_set.json
src/lab/: LLM.ipynb  ingest.ipynb
src/provider/: base.py  chat_gpt.py  deepseek.py
src/rag/: ingest.py  prompts.py  rag_orchestrator.py  re_ranker.py  retrieve.py
src/streamlit/: streamlit.py
src/utils/: calculator.py  checkpointer.py  demo.py  reference_parser.py
