[project]
name = "esp3-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "pdfminer-six>=20250506",
    "pqdm>=0.2.0",
    "pyarrow>=21.0.0",
    "sentence-transformers>=5.1.1",
]
